2008-10-17 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/win32/WIN32Server.h,
	* Source/win32/WIN32Server.m,
	* Source/win32/w32_activate.m,
	* Source/win32/w32_movesize.m,
	* Source/win32/w32_general.m: Removed unused and unneeded code
	left over from the last cleanup. This code was mostly setting
	server flags that never got read or using falgs that never were set.
	
2008-10-14 Fred Kiefer <FredKiefer@gmx.de>

        * Source/winlib/WIN32GState.m: Removed unneeded code. General cleanup.
        * Source/winlib/WIN32GState.m (-DPSimage:...:): Scale and rotate
	images correctly.
        * Source/winlib/WIN32GState.m (-compositeGState:...fraction:):
	Position images on scaled views better.

2008-09-14 Fred Kiefer <FredKiefer@gmx.de>

        * Source/art/ARTContext.m (-setupDrawInfo): Moved code from here
	to...
	* Source/x11/XGServer.m (-getForScreen:pixelFormat:masks:::):
	... here, including helper functions. Commented out this code and
	replaced it by a different approach.
	* Headers/x11/XGServer.h: Declare this new method.

2008-09-14 13:17-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* install.sh: Adding install script for use by compile-all.

2008-08-19 Fred Kiefer <FredKiefer@gmx.de>

        * Source/art/ARTContext.m (-GSSetDevice:::): Only call
	setupDrawInfo once.
        * Source/art/ARTContext.m (-setupDrawInfo): Try to handle
	endianess differance better.
        * Source/art/ARTContext.m (-initializeBackend): Call
	artcontext_setup_gamma(). 
	* Source/art/blit.h,
	* Source/art/blit-main.m:  New function artcontext_setup_gamma()
	split off from artcontext_setup_draw_info().
	
2008-08-14 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-_ewmh_isMinimized:): Correct
	indentation. 
	* Source/x11/XGServerEvent.m (-receivedEvent:type:extra:forMode:):
	For PropertyNotify cache the window first.

2008-07-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-window::::): For EWMH window